<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logoContentDescription"
        android:src="@drawable/app103" />

    <RelativeLayout
        android:id="@+id/loginBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/lgNameImage"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:contentDescription="@string/loginDescription"
                android:src="@drawable/lock05" />

            <EditText
                android:id="@+id/loginName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/lgNameImage"
                android:layout_toRightOf="@+id/lgNameImage"
                android:autoText="true"
                android:hint="@string/loginhint"
                android:inputType="number"
                android:textColor="#ffffffff"
                android:textColorHint="#ffffffff"
                android:textSize="@dimen/abc_text_size_small_material" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relativeLayout"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/lock03" />

            <EditText
                android:id="@+id/passWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imageView3"
                android:hint="@string/passwdhint"
                android:inputType="textPassword"
                android:textColor="#ffffffff"
                android:textColorHint="#ffffffff"
                android:textSize="@dimen/abc_text_size_small_material" />


        </RelativeLayout>

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relativeLayout2"
            android:layout_marginTop="30dp"
            android:alpha="0.55"
            android:background="#376b7a"
            android:onClick="loginClick"
            android:text="@string/loginText"
            android:textColor="#ffffffff" />
    </RelativeLayout>
</RelativeLayout>
