<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <ecjtu.net.demon.view.CycleImageView
            android:id="@+id/UserImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:onClick="slidingMenuClickListen"
            android:src="@drawable/userimage" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/User"
        android:layout_marginTop="50dp"
        android:background="@color/action_bar_background"
        android:onClick="slidingMenuClickListen"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:scaleType="fitCenter"
            android:src="@drawable/mainpage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="34dp"
            android:gravity="center"
            android:text="@string/ScoreQuery"
            android:textColor="@color/white"
            android:textSize="@dimen/icon_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main"
        android:onClick="slidingMenuClickListen"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        >

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:scaleType="fitCenter"
            android:src="@drawable/score" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="34dp"
            android:gravity="center"
            android:text="@string/ScoreQuery"
            android:textColor="#505155"
            android:textSize="@dimen/icon_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/classquery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/score"
        android:onClick="slidingMenuClickListen"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:scaleType="fitCenter"
            android:src="@drawable/classquery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="34dp"
            android:gravity="center"
            android:text="@string/ClassQuery"
            android:textColor="#505155"
            android:textSize="@dimen/icon_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/yktquery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/classquery"
        android:onClick="slidingMenuClickListen"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        >

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:scaleType="fitCenter"
            android:src="@drawable/ecard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="34dp"
            android:gravity="center"
            android:text="@string/YKTQuery"
            android:textColor="#505155"
            android:textSize="@dimen/icon_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bookquery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/yktquery"
        android:divider="@android:drawable/divider_horizontal_bright"
        android:onClick="slidingMenuClickListen"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:showDividers="end"
        >

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:scaleType="fitCenter"
            android:src="@drawable/book" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="34dp"
            android:gravity="center"
            android:text="@string/LibaryQuery"
            android:textColor="#505155"
            android:textSize="@dimen/icon_text_size" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffE7E7E7" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="slidingMenuClickListen"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="23dp"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="#b2b2b2"
                android:textSize="@dimen/icon_bottom_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="slidingMenuClickListen"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="23dp"
                android:gravity="center"
                android:text="@string/scan"
                android:textColor="#b2b2b2"
                android:textSize="@dimen/icon_bottom_size" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/User"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/User"
        android:layout_toRightOf="@+id/User"
        android:text="@string/UserName"
        android:textColor="@android:color/black"
        android:textSize="24dp" />

</RelativeLayout>
